--- a/buildImg/dual.img-ramdisk/init.cm.rc
+++ b/buildImg/dual.img-ramdisk/init.cm.rc
@@ -41,3 +41,8 @@ service compcache /system/bin/handle_compcache
     user root
     group root
     oneshot
+
+# sysinit (/system/etc/init.d)
+service sysinit /system/bin/sysinit
+    user root
+    oneshot
