--- a/buildImg/dual.img-ramdisk/init.rc
+++ b/buildImg/dual.img-ramdisk/init.rc
@@ -41,7 +41,6 @@ loglevel 3
 
 # Backward compatibility
     symlink /system/etc /etc
-    symlink /system/cache /cache
     symlink /sys/kernel/debug /d
 
 # Right now vendor lives on the same filesystem as system,
@@ -130,12 +129,12 @@ on fs
     # Mount /system rw first to give the filesystem a chance to save a checkpoint
     mount yaffs2 mtd@system /system
     mount yaffs2 mtd@system /system ro remount
-    mount yaffs2 mtd@userdata /data nodev
+    mount yaffs2 mtd@userdata /data nosuid nodev
     mount yaffs2 mtd@cache /cache nosuid nodev
 
 on post-fs
     # once everything is setup, no need to modify /
-#    mount rootfs rootfs / ro remount
+    mount rootfs rootfs / ro remount
     # mount shared so changes propagate into child namespaces
     mount rootfs rootfs / shared rec
     mount tmpfs tmpfs /mnt/secure private rec
@@ -219,12 +218,12 @@ on post-fs-data
     mkdir /data/property 0700 root root
     mkdir /data/ssh 0750 root shell
     mkdir /data/ssh/empty 0700 root root
-    mkdir /data/radio 0770 radio radio
+	mkdir /data/radio 0770 radio radio
 
     # create dalvik-cache and double-check the perms, so as to enforce our permissions
     mkdir /data/dalvik-cache 0771 system system
-    chown system system /data/dalvik-cache
-    chmod 0771 /data/dalvik-cache
+	chown system system /data/dalvik-cache
+	chmod 0771 /data/dalvik-cache
 
     # create resource-cache and double-check the perms
     mkdir /data/resource-cache 0771 system system
@@ -245,8 +244,8 @@ on post-fs-data
     #setprop vold.post_fs_data_done 1
 
 # Include extra init file
-    import /init.cm.rc
-
+	import /init.cm.rc
+	
 on boot
 # basic network init
     ifup lo
@@ -268,7 +267,9 @@ on boot
 
     # Tweak background writeout
     write /proc/sys/vm/dirty_expire_centisecs 200
-    write /proc/sys/vm/dirty_background_ratio  5
+    write /proc/sys/vm/dirty_background_ratio 5
+    write /proc/sys/vm/vfs_cache_pressure 300
+    write /proc/sys/vm/swappiness 0
 
     # Permissions for System Server and daemons.
     chown radio system /sys/android_power/state
@@ -285,12 +286,12 @@ on boot
     chmod 0660 /sys/power/wake_lock
     chmod 0660 /sys/power/wake_unlock
 
-    # Assume SMP uses shared cpufreq policy for all CPUs
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
-    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
+    # allow system to modify cpufreq control files for CM9 compatibility
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor	
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor	
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq	
+    chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq	
+    chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq	
     chmod 0664 /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
 
     chown system system /sys/class/timed_output/vibrator/enable
@@ -452,19 +453,23 @@ service drm /system/bin/drmserver
 service media /system/bin/mediaserver
     class main
     user media
-    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc qcom_diag
+    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc
     ioprio rt 4
 
-#service bootanim /system/bin/bootanimation
-#    class main
-#    user graphics
-#    group graphics
-#    disabled
-#    oneshot
+service bootanim /system/bin/bootanimation
+    class main
+    user graphics
+    group graphics
+    disabled
+    oneshot
 
 service installd /system/bin/installd
     class main
     socket installd stream 600 system system
+
+#service flash_recovery /system/etc/install-recovery.sh
+#    class main
+#    oneshot
 
 service racoon /system/bin/racoon
     class main
@@ -506,14 +511,7 @@ service mdnsd /system/bin/mdnsd
     disabled
     oneshot
 
-service sensorservice /system/bin/sensorservice
-    class main
-    user system
-    group graphics audio camera inet net_bt net_bt_admin net_bw_acct drmrpc
-
-service ubuntuappmanager /system/bin/ubuntuappmanager
-    class main
-
-service ubuntu_chroot /system/bin/ubuntu_chroot
+# Execute files in /system/etc/init.d before booting
+service run-parts /sbin/bb/busybox run-parts /system/etc/init.d
     class main
     oneshot
