--- a/buildImg/dual.img-ramdisk/res/misc/aosp/init.tuna.rc
+++ b/buildImg/dual.img-ramdisk/res/misc/aosp/init.tuna.rc
@@ -16,18 +16,18 @@ on init
     symlink /mnt/shell/emulated/0 /storage/emulated/legacy
 
     # create directory for mounting usb drives
-    mkdir /storage/usbdisk 0777 system system
+    mkdir /storage/usbdisk 0666 system system
     symlink /storage/usbdisk /mnt/usbdisk
     symlink /mnt/usbdisk /usbdisk
 
 on post-fs-data
-    mkdir /data/media 0770 media_rw media_rw
+        mkdir /data/media 0770 media_rw media_rw
 
-	mkdir /data/misc/wifi 0770 wifi wifi
-	mkdir /data/misc/wifi/sockets 0770 wifi wifi
-	mkdir /data/misc/dhcp 0770 dhcp dhcp
-	chown dhcp dhcp /data/misc/dhcp
-	mkdir /data/smc 0770 drmrpc drmrpc
+        mkdir /data/misc/wifi 0770 wifi wifi
+        mkdir /data/misc/wifi/sockets 0770 wifi wifi
+        mkdir /data/misc/dhcp 0770 dhcp dhcp
+        chown dhcp dhcp /data/misc/dhcp
+        mkdir /data/smc 0770 drmrpc drmrpc
         chown drmrpc drmrpc /data/smc/counter.bin
         chown drmrpc drmrpc /data/smc/storage.bin
         chown drmrpc drmrpc /data/smc/system.bin
@@ -53,6 +53,9 @@ on boot
 	mount debugfs /sys/kernel/debug /sys/kernel/debug
 	chmod 0666 /dev/pvrsrvkm
 
+# Lower maximum frequency when screen is off
+	write /sys/devices/system/cpu/cpu0/cpufreq/screen_off_max_freq 700000
+
 # autosuspend root hubs immediatly after attached devices
 	write /sys/bus/usb/devices/usb1/power/autosuspend_delay_ms 0
 	write /sys/bus/usb/devices/usb2/power/autosuspend_delay_ms 0
@@ -60,6 +63,8 @@ on boot
 on fs
 	mkdir /factory 0775 radio radio
 	mount_all /fstab.tuna
+	mkdir /data/cache/
+	mkdir /data/cache/1st
 	setprop ro.crypto.fuse_sdcard true
 
 # change permissions for mtd device
@@ -73,9 +78,6 @@ on fs
 # change permissions for Tiler driver
     chmod 0777 /dev/tiler
     chmod 0777 /dev/dmm
-
-# change permissions for gamma settings
-    chmod 0666 /sys/devices/platform/omapdss/manager0/gamma
 
 # change permissions for ION driver
     chmod 0777 /dev/ion
@@ -107,7 +109,6 @@ on fs
 	chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
 
 # backlight
-	chmod 0666 /sys/class/backlight/s6e8aa0/brightness	
 	chown system system /sys/class/backlight/s6e8aa0/brightness
 
 # leds
@@ -118,8 +119,6 @@ on fs
     chmod 0660 /sys/class/sec/gps/GPS_PWR_EN/value
     chown root system /sys/class/sec/gps/GPS_nRST/value
     chmod 0660 /sys/class/sec/gps/GPS_nRST/value
-    chown system system /proc/mcspi1_cs3_ctrl
-    chmod 0600 /proc/mcspi1_cs3_ctrl
 
 # ril control auto-suspend
 	chmod 0660 /sys/bus/usb/devices/usb1/power/control
@@ -131,12 +130,25 @@ on property:persist.sys.tuna.off_mode=*
 on property:ril.modem.lte.powercontrol=*
 	write /sys/bus/usb/devices/1-1/power/control ${ril.modem.lte.powercontrol}
 
+service fixtunapower /sbin/fixtunapower.sh
+    class main
+    oneshot
+
 service fRom /system/bin/fRom \
 	-x /data/misc/camera/R5_MVEN003_LD2_ND0_IR0_SH0_FL1_SVEN003_DCCID1044 \
 	-d /dev/mtd/mtd0
 	user media
 	group media
 	class late_start
+	oneshot
+
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --no2bytes --enable_lpm \
+	--tosleep 50000 --baudrate 3000000 --use_baudrate_for_download --i2s=1,1,0,1 \
+	--patchram /vendor/firmware/bcm4330.hcd /dev/ttyO1
+	class main
+	user bluetooth
+	group bluetooth net_bt_admin
+	disabled
 	oneshot
 
 service pvrsrvctl /vendor/bin/pvrsrvctl --start --no-module
@@ -230,18 +242,5 @@ service iprenew_bnep0 /system/bin/dhcpcd -n
 	disabled
 	oneshot
 
-# bugreport is triggered by holding down volume down, volume up and power
-# it's easy to trigger when wanting to take screenshots. let's disable it
-#service bugreport /system/bin/bugmailer.sh -v
-#	class main
-#	disabled
-#	oneshot
-#	keycodes 114 115 116
-
 service battery_charger /charger
 	class charger
-
-# Fix power tuna frequency problem
-service fixtunapower /sbin/fixtunapower.sh
-    class main
-    oneshot
