--- a/buildImg/dual.img-ramdisk/res/misc/aosp/ueventd.rc
+++ b/buildImg/dual.img-ramdisk/res/misc/aosp/ueventd.rc
@@ -15,9 +15,6 @@
 # the msm hw3d client device node is world writable/readable.
 /dev/msm_hw3dc            0666   root       root
 
-# the DIAG device node is not world writable/readable.
-/dev/diag                 0660   system     qcom_diag
-
 # gpu driver for adreno200 is globally accessible
 /dev/kgsl                 0666   root       root
 
@@ -46,7 +43,7 @@
 /dev/adsp/*               0660   system     audio
 /dev/snd/*                0660   system     audio
 /dev/mt9t013              0660   system     system
-/dev/msm_camera/*         0660   system     camera
+/dev/msm_camera/*         0660   system     system
 /dev/akm8976_daemon       0640   compass    system
 /dev/akm8976_aot          0640   compass    system
 /dev/akm8973_daemon       0640   compass    system
